# at42qt1070-pico

./: .gitignore  CMakeCache.txt  README.md
at42qt1070/: CMakeLists.txt  at42qt1070_i2c.c
